@@ -5,6 +5,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilator 3.700***
 
+**   Add /*verilator coverage_module_off*/.
+
 ***  Optimize two-level shift and and/or trees, +23% on one test.
 
 ***  Support posedge of bit-selected signals, bug45. [Rodney Sinclair]
